objects/Account_Alias__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Aliases</relationshipLabel>
        <relationshipName>Account_Aliases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Alias_Name__c</fullName>
        <label>Alias Name</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Customer__c</fullName>
        <externalId>true</externalId>
        <label>Oracle Customer #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Account Alias</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AA-{00000000}</displayFormat>
        <label>Account Alias Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Aliases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>